# frontend

./: .env.default  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: docker-publish.yml
frontend/: __init__.py  __main__.py  app.py  config.py  schemas.py  user.py
frontend/client/: api.py  api_client.py  cities.py  places.py  routes.py
frontend/clients/: cities.py  routes.py  schemas.py
frontend/static/: print.css
frontend/templates/: base.html  cities.html  index.html  menu.html  places_on_route.html  route.html  route_places.html  routes.html
frontend/view/: cities.py  places.py  routes.py
